<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="version_number">1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for titles-->
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_add_evaluation">Enter your evaluation information</string>

    <!-- Strings related to adding a course -->
    <string name="title_activity_add_course">Enter your course information</string>
    <string name="prompt_name">Course name</string>
    <string name="prompt_code">Course code</string>
    <string name="action_submit_course">Submit course</string>

    <!-- Strings related to adding a evaluation -->
    <string name="prompt_ename">Evaluation name</string>
    <string name="prompt_weight">Evaluation weight</string>
    <string name="prompt_mark">Evaluation mark</string>
    <string name="action_submit_evaluation">Submit evaluation</string>
    <string name="action_sign_in_short">Submit</string>

    <!-- Strings for error messages -->
    <string name="error_field_required">This field is required</string>
    <string name="error_mark">Enter a number between 0 - 100</string>
    <string name="error_weight">Total weight exceeds 100 or invalid weight</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_scale">Grade Scaling</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_delete_data">Delete data</string>
    <string name="pref_header_info">About</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
